style: fixes user information spacing

--- a/src/css/userInfos.css
+++ b/src/css/userInfos.css
@@ -41,6 +41,16 @@
 
 .user-followers-container {
   display: flex;
-  justify-content: space-between;
   padding-bottom: 20px;
+}
+
+.user-followers,
+.user-following,
+.user-stars {
+  margin: 0px 5px;
+  font-weight: 500;
+}
+
+.user-dot-rigth {
+  margin-right: -5px;
 }
